Dont knok what happend to my commit so I start over. Animation code not working but making progress. There are some issues with the java output, the parameters do not match with what we are obtaining. Little issue in Space.java toList() changed to Collectors.ToList()